--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,8 +10,8 @@ jobs:
   test:
     env:
       MONGODB_CLUSTER_ADDRESS: cluster0.daoynj5.mongodb.net
-      MONGODB_USERNAME: divinesam100
-      MONGODB_PASSWORD: Divinesam1.
+      MONGODB_USERNAME: ${{secrets.MONGODB_USERNAME}}
+      MONGODB_PASSWORD: ${{secrets.MONGODB_PASSWORD}}
       PORT: 3000
     environment: testing
     runs-on: ubuntu-latest
